[gd_scene load_steps=5 format=2]

[ext_resource path="res://data/resources/themes/default.tres" type="Theme" id=1]
[ext_resource path="res://data/scripts/menu/main.gd" type="Script" id=2]
[ext_resource path="res://fonts/red_hat_display_bold_italic.tres" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[node name="Main" type="Control" groups=[
"menu",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -640.0
margin_top = -360.0
margin_right = 640.0
margin_bottom = 360.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"__editor_plugin_screen__": "2D",
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -227.0
margin_right = 125.0
margin_bottom = 227.0
rect_min_size = Vector2( 250, 0 )
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 250.0
margin_bottom = 54.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.509804, 0.431373, 1 )
custom_colors/font_color_shadow = Color( 0.5, 0.166333, 0.115, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
text = "Platshoot"
align = 1
valign = 1

[node name="Singleplayer" type="Button" parent="VBoxContainer"]
margin_top = 74.0
margin_right = 250.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 60 )
text = "Singleplayer"

[node name="Multiplayer" type="Button" parent="VBoxContainer"]
margin_top = 154.0
margin_right = 250.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 60 )
text = "Multiplayer"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 234.0
margin_right = 250.0
margin_bottom = 294.0
rect_min_size = Vector2( 0, 60 )
text = "Options"

[node name="Statistics" type="Button" parent="VBoxContainer"]
margin_top = 314.0
margin_right = 250.0
margin_bottom = 374.0
rect_min_size = Vector2( 0, 60 )
text = "Statistics"

[node name="QuitGame" type="Button" parent="VBoxContainer"]
margin_top = 394.0
margin_right = 250.0
margin_bottom = 454.0
rect_min_size = Vector2( 0, 60 )
text = "Quit Game"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[connection signal="pressed" from="VBoxContainer/Singleplayer" to="." method="_on_singleplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Multiplayer" to="." method="_on_multiplayer_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/Statistics" to="." method="_on_statistics_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitGame" to="." method="_on_quit_game_pressed"]
